@@ -8,6 +8,8 @@ v5.1.0:
       (summary, lap data, sample data, track/map data, temperature data)
     - unit tests for GarminFITParser
   - ConvertUtils: new conversion method from semicircles to degrees
+  - TrackPanel: start and end trackpoints (circles) have a white border,
+    so they are also visible on backgrounds with same color
   
 v5.0.0:
  General changes:
